# dpdk-1

./: .gitignore  .travis.yml  MAINTAINERS  meson.build  meson_options.txt
.ci/: linux-build.sh  linux-setup.sh
app/: Makefile  meson.build
app/pdump/: main.c
app/test/: Makefile  meson.build  test_barrier.c  test_compressdev.c  test_cryptodev.c  test_cryptodev_aes_test_vectors.h  test_cryptodev_asym.c  test_cryptodev_blockcipher.c  test_cryptodev_blockcipher.h  test_cryptodev_mod_test_vectors.h  test_hash_readwrite_lf.c  test_stack.c  test_stack_perf.c  test_timer_racecond.c
app/test-bbdev/: main.c  main.h  test-bbdev.py  test_bbdev_perf.c
app/test-eventdev/: test_perf_common.c
app/test-pmd/: cmdline.c  config.c  parameters.c  testpmd.c  testpmd.h  txonly.c
config/: common_base  defconfig_arm64-octeontx2-linuxapp-gcc  defconfig_arm64-thunderx2-linuxapp-gcc  meson.build
config/arm/: arm64_octeontx2_linuxapp_gcc  arm64_thunderx2_linuxapp_gcc  meson.build
config/x86/: meson.build
devtools/: test-build.sh
doc/api/: doxy-api-index.md
drivers/net/: Makefile  (+1 more)
drivers/net/af_xdp/: Makefile  meson.build  rte_eth_af_xdp.c
drivers/net/ice/: Makefile  ice_ethdev.c  ice_ethdev.h  ice_rxtx.c  ice_rxtx.h  ice_rxtx_vec_avx2.c  ice_rxtx_vec_common.h  ice_rxtx_vec_sse.c  meson.build
drivers/net/nfb/: Makefile  meson.build  nfb.h  nfb_ethdev.c  nfb_rx.c  nfb_rx.h  nfb_rxmode.c  nfb_rxmode.h  nfb_stats.c  nfb_stats.h  nfb_tx.c  nfb_tx.h
examples/: meson.build
lib/: Makefile  meson.build
mk/: rte.app.mk
usertools/: dpdk-devbind.py  dpdk-setup.sh
(+233 files in other folders)
